# app_orcamentos

./: .env.example  .gitignore  Procfile  README.md  app.md  app.py  log.txt  main.py  pyproject.toml  render.yaml  requirements.txt  test.http
instance/whatsapp_sessions/user_2_rafael/: Local State
instance/whatsapp_sessions/user_2_rafael/Default/: DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
instance/whatsapp_sessions/user_2_rafael/Default/GCM Store/: LOG  (+1 more)
instance/whatsapp_sessions/user_2_rafael/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  index
instance/whatsapp_sessions/user_2_rafael/GraphiteDawnCache/: data_1  index
instance/whatsapp_sessions/user_2_rafael/ShaderCache/: data_1  index
instance/whatsapp_sessions/user_2_rafael/segmentation_platform/: ukm_db
migrations/: README.md  env.py
migrations/versions/: 0001_initial.py
orcamentos/: __init__.py  extensions.py  models.py  routes.py
orcamentos/services/: exporters.py  importers.py  mailer.py  messaging.py  sms.py  timezone.py  validation.py  whatsapp.py  whatsapp_delivery.py
orcamentos/static/: styles.css
orcamentos/templates/: admin_dashboard.html  admin_database.html  admin_login.html  admin_users.html  base.html  dashboard.html  forgot_password.html  history.html  import.html  login.html  messages.html  register.html  settings.html  subscription.html  supplier_form.html  suppliers.html
tests/: conftest.py  test_importers.py  test_routes.py
(+309 files in other folders)
