[project]
name = "app-orcamentos"
version = "0.1.0"
description = "Aplicacao web para cadastro e automacao de orcamentos com fornecedores"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "playwright>=1.50.0",
    "playwright-stealth>=1.0.6",
    "psycopg[binary]>=3.2.0",
    "pywhatkit>=5.4",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.2",
    "tzdata>=2024.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
